--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tourly - Travel agancy</title>
+  <title>DestiNex - Travel agancy</title>
 
   <!-- 
     - favicon
@@ -55,7 +55,7 @@
         </a>
 
         <a href="#" class="logo">
-          <img src="./assets/images/logo.svg" alt="Tourly logo">
+          <img src="./assets/images/logo.png" alt="DestiNex logo">
         </a>
 
         <div class="header-btn-group">
@@ -103,7 +103,7 @@
           <div class="navbar-top">
 
             <a href="#" class="logo">
-              <img src="./assets/images/logo-blue.svg" alt="Tourly logo">
+              <img src="./assets/images/logo-blue.svg" alt="DestiNex logo">
             </a>
 
             <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
@@ -714,7 +714,7 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="./assets/images/logo.svg" alt="Tourly logo">
+            <img src="./assets/images/logo.png" alt="DestiNex logo">
           </a>
 
           <p class="footer-text">
@@ -744,7 +744,7 @@
             <li class="contact-item">
               <ion-icon name="mail-outline"></ion-icon>
 
-              <a href="mailto:info.tourly.com" class="contact-link">info.tourly.com</a>
+              <a href="mailto:info.DestiNex.com" class="contact-link">info.DestiNex.com</a>
             </li>
 
             <li class="contact-item">
