--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
         </a>
 
-        <a href="#" class="logo">
-          <img src="./assets/images/logo.png" alt="DestiNex logo">
-        </a>
+<a href="javascript:void(0)" class="logo">
+  <img src="./assets/images/logo.png" alt="DestiNex logo">
+</a>
 
         <div class="header-btn-group">
 
