some changes by me

--- a/index.html
+++ b/index.html
@@ -194,26 +194,26 @@
           <form action="" class="tour-search-form">
 
             <div class="input-wrapper">
-              <label for="destination" class="input-label">Search Destination*</label>
+              <label for="destination" class="input-label">Search Destination</label>
 
               <input type="text" name="destination" id="destination" required placeholder="Enter Destination"
                 class="input-field">
             </div>
 
             <div class="input-wrapper">
-              <label for="people" class="input-label">Pax Number*</label>
+              <label for="people" class="input-label">Pax Number</label>
 
               <input type="number" name="people" id="people" required placeholder="No.of People" class="input-field">
             </div>
 
             <div class="input-wrapper">
-              <label for="checkin" class="input-label">Checkin Date**</label>
+              <label for="checkin" class="input-label">Checkin Date</label>
 
               <input type="date" name="checkin" id="checkin" required class="input-field">
             </div>
 
             <div class="input-wrapper">
-              <label for="checkout" class="input-label">Checkout Date*</label>
+              <label for="checkout" class="input-label">Checkout Date</label>
 
               <input type="date" name="checkout" id="checkout" required class="input-field">
             </div>
@@ -223,6 +223,8 @@
           </form>
 
         </div>
+
+
       </section>
 
 
